2008-02-01  Stefan Monnier  <monnier@iro.umontreal.ca>

	* image-mode.el (image-mode-current-vscroll)
	(image-mode-current-hscroll): Make buffer-local.
	(image-set-window-vscroll, image-set-window-hscroll): Simplify.
	(image-reset-current-vhscroll): Use the latest setting when displaying
	for the first time in a window.  Apply to all windows in the frame.
	(image-mode): Don't make image-mode-current-[vh]scroll buffer-local.

	* progmodes/grep.el (grep-compute-defaults):
	Don't mix up defaults for different connections to the same host.

2008-01-31  Vinicius Jose Latorre  <viniciusjl@ig.com.br>

	* blank-mode.el: Renamed to whitespace.el.

	* obsolete/whitespace.el: Renamed to obsolete/old-whitespace.el.

2008-01-31  Stefan Monnier  <monnier@iro.umontreal.ca>

	* net/rcompile.el (remote-compile): Remove broken code.

2008-01-31  Jason Rumney  <jasonr@gnu.org>

	* term/w32-win.el (image-library-alist): Prefer libxpm.dll.

2008-01-31  Juanma Barranquero  <lekktu@gmail.com>

	* linum.el (linum-unload-function): New function.

2008-01-30  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gdb-ui.el (gdb-var-set-format-regexp): New constant.
	(gdb-var-set-format-handler): New function.
	(gdb-var-set-format): Use it.

2008-01-30  Juanma Barranquero  <lekktu@gmail.com>

	* emacs-lisp/check-declare.el (check-declare-directory):
	* emacs-lisp/authors.el (authors): Use `find-program' and
	`grep-program' instead of hardcoded program names.

	* emacs-lisp/cl-loaddefs.el: Update.

2008-01-30  Tassilo Horn  <tassilo@member.fsf.org>

	* info.el (Info-bookmark-make-cell, Info-bookmark-jump): New functions.
	Implement bookmark support the new make-cell/handler way.
	(Info-mode): Bind bookmark-make-cell-function to
	Info-bookmark-make-cell buffer locally.

2008-01-30  Richard Stallman  <rms@gnu.org>

	* progmodes/etags.el (tags-query-replace): Delete unused optional args.
	Doc fix.

	* files.el (hack-local-variables): Don't query about fake variables.
