@@ -1,3 +1,8 @@
+2008-02-01  Kenichi Handa  <handa@ni.aist.go.jp>
+
+	* ccl.c (CCL_WRITE_CHAR): Fix overflow checking.
+	(CCL_WRITE_MULTIBYTE_CHAR): Likewise.
+
 2008-01-31  Kenichi Handa  <handa@ni.aist.go.jp>
 
 	* keyboard.c (make_ctrl_char): If C is a multibyte character, just
