@@ -1,3 +1,12 @@
+2008-02-01  Jason Rumney  <jasonr@gnu.org>
+
+	* w32-fns.el: Partially revert 2007-11-10 change.
+
+2008-02-01  Martin Rudalics  <rudalics@gmx.at>
+
+	* mail/rmail.el (rmail-highlight): Fix specification.
+        Reported by: pod <pod@herald.ox.ac.uk>.
+
 2008-02-01  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* image-mode.el (image-mode-current-vscroll)
